<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/calk">

    <EditText
        android:id="@+id/et_coldPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/coldPrice"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:textSize="21sp"
        android:textColorHint="#000000"/>

    <EditText
        android:id="@+id/et_hotPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hotPrice"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:textSize="21sp"
        android:textColorHint="#000000"/>


    <EditText
        android:id="@+id/et_gasPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gasPrice"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:textSize="21sp"
        android:textColorHint="#000000"/>

    <EditText
        android:id="@+id/et_electricityPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/electricityPrice"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:textSize="21sp"
        android:textColorHint="#000000"/>


    <Button
        android:id="@+id/b_updatePriceGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updatePriceGuide" />

    <Button
        android:id="@+id/b_back_tomain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/returnMainActivity"
        android:onClick="backMain" />

</LinearLayout>